packages/typ/tests/fixtures/diagnostics/0067_core_apply_non_function_06.ml.expected
File "0067_core_apply_non_function_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0067_core_apply_non_function_06 is not a valid module name.

File "0067_core_apply_non_function_06.ml", line 3, characters 2-6:
3 |   zeta 6
      ^^^^
Error: This expression has type int
       This is not a function; it cannot be applied.
